# icp-tutorials

hello_world/: Cargo.toml  package-lock.json
hello_world/src/hello-world-call/: Cargo.toml
hello_world/src/hello-world-call/src/: errors.rs  main.rs  types.rs
hello_world/src/hello_world_backend/: Cargo.toml
hello_world/src/hello_world_backend/src/: lib.rs
