[workspace]
members = [
    "src/hello_world_backend",
    "src/hello-world-call",
]
resolver = "2"

[workspace.dependencies]
candid = "0.9"
ic-cdk = "0.11"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0", features = ["derive"] }
ring = "0.16.20"
ic-agent = { version = "0.29.0", features = ["pem"] }
flex-error = { version = "0.4.4", default-features = false }
dirs = "5.0.1"
tokio = { version = "1", features  = ["full"] }
thiserror = "1"
