[package]
name = "hello-world-call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.9"
ic-cdk = { version = "0.9"}
ring = "0.16.20"
ic-agent = { version = "0.27.0", features = ["pem"] }
flex-error = { version = "0.4.4", default-features = false }
dirs = "5.0.1"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1", features  = ["full"] }
