[package]
name = "hello-world-call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true  }
ring = { workspace = true  }
ic-agent = { workspace = true  }
flex-error = { workspace = true  }
dirs = { workspace = true  }
serde = { workspace = true  }
tokio = { workspace = true  }
thiserror = { workspace = true  }
